--- a/src/Components/FilterSearchResultsForm.css
+++ b/src/Components/FilterSearchResultsForm.css
@@ -1,3 +1,33 @@
 .filterContainer {
     border: 1px solid purple; 
 }
+
+.dropDownOptions {
+    width: 150px; 
+   display: inline-block;
+}
+
+/* .index{
+    
+    z-index: 99999;
+    background-color: grey;
+    width: 100%; 
+    text-align: center;
+    justify-self: center;
+} */
+
+/* .center {
+  position: absolute;
+  left: 50%;
+  margin-left: -50px;
+  top: 50%;
+  margin-top: -50px;
+} */
+
+/* .inline {
+    display: inline;
+    position: relative;
+    text-align: center;
+    justify-content: center;
+} */
+
