--- a/src/Routes/Navbar.css
+++ b/src/Routes/Navbar.css
@@ -14,7 +14,7 @@
 }
 
 .title {
-    color: hsl(200, 100%, 40%)
+    color: hsl(200, 100%, 40%);
 }
 
 .flex{
@@ -36,7 +36,7 @@
     margin-left: 70px;
     text-decoration: none;
     font-size: 20px;
-    color: hsl(200, 100%, 50%)
+    color: hsl(200, 100%, 50%);
 }
 
 .links:hover {
