--- a/src/Components/JobListings.css
+++ b/src/Components/JobListings.css
@@ -1,7 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Teko:wght@300..700&display=swap');
+
+.dm-sans {
+    font-family: "DM Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    color: hsl(0, 0%, 35%);
+  }
+
 .JobListContainer {
-    border: 1px solid blue; 
+    border: 3px solid hsl(0, 0%, 90%); 
+    border-radius: 10px;
     background-color: white;
     margin: 0 150px; 
+    margin-bottom: 10px;
 }
 
 .bookmark-icon {
@@ -13,3 +25,31 @@
     width: 25px; 
     height: 35px; 
 }
+
+.job-title {
+    font-size: 20px;
+    margin-top: 0;
+}
+
+.title-bookmark {
+    display: flex;
+}
+
+.bookmark-container {
+    padding-left: 10px;
+}
+
+.job-info {
+    padding: 20px 20px;
+}
+
+.details-button {
+    background-color: hsl(200, 100%, 50%);
+    border: 1px solid transparent;
+    border-radius: 10px;
+    color: white;
+    width: 100px; 
+    height: 33px;
+}
+
+
