styling next page arrows to flex-end

--- a/src/Components/NextPageArrows.css
+++ b/src/Components/NextPageArrows.css
@@ -1,15 +1,19 @@
 .left-arrow {
+    display: flex; 
     width: 30px; 
-    position: absolute;
     left: 10px; 
+    align-self: center;
+    padding-right: 30px;
 }
 
 .right-arrow {
+    padding-right: 30px; 
+    display: flex;
     width: 30px; 
-    position: absolute;
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
     right: 10px;
+    align-self: center;
 }
 
 .left-arrow-container {
@@ -18,7 +22,6 @@
     height: 40px; 
     text-align: center;
     align-content: center;
-    display: inline-block;
 }
 
 .right-arrow-container {
@@ -27,12 +30,10 @@
     height: 40px; 
     text-align: center;
     align-content: center;
-    display: inline-block;
 }
 
 .pageNum {
-    position: absolute;
-    left: 50%;
+    display: flex;
     background-color: hsl(200, 100%, 50%);
     padding: 5px 10px; 
     color: white; 
@@ -41,4 +42,7 @@
 .next-page-container {
     background-color: hsl(0, 0%, 90%);
     height: 30px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
 }
