--- a/src/Components/FilterSearchResultsForm.css
+++ b/src/Components/FilterSearchResultsForm.css
@@ -3,10 +3,16 @@
 }
 
 .dropDownOptions {
-    width: 150px; 
+   width: 150px; 
    display: inline-block;
    padding: 0 5px; 
 }
+
+.remove {
+   display: inline-block;
+}
+
+
 
 
 
