--- a/src/Routes/Navbar.css
+++ b/src/Routes/Navbar.css
@@ -14,6 +14,10 @@
 
 .title {
     color: hsl(200, 100%, 40%);
+    font-size: 30px;
+    text-decoration: none;
+    display: inline;
+    vertical-align: middle;
 }
 
 .flex{
