making an undo option when unfavoriting jobs in the favorites tab

--- a/src/Components/JobListings.css
+++ b/src/Components/JobListings.css
@@ -57,4 +57,37 @@
     background-color: hsl(200, 100%, 40%);
 }
 
+.undo-button {
+    font-weight: bold;
+    color: hsl(200, 100%, 50%);
+    font-size: 25px;
+    padding-top: 10px;
+}
+
+.undo-button:hover {
+    color: hsl(200, 100%, 40%);
+}
+
+.removed-job-title {
+    font-size: 23px;
+    margin-bottom: 0; 
+    padding: 10px; 
+}
+
+.removed-message{
+    color: grey; 
+    font-size: 20px;
+}
+
+.center-removed-job {
+    display: flex;
+}
+
+.center-removed-job-details {
+    align-self: center;
+    margin-bottom: 0;
+}
+
+
+
 
