--- a/src/Components/JobListings.css
+++ b/src/Components/JobListings.css
@@ -18,8 +18,9 @@
 }
 
 .bookmark-icon {
-    width: 20px; 
-    height: 30px; 
+    width: 33px; 
+    height: 33px; 
+    margin-left: -5px;
 }
 
 .blue-bookmark-icon {
